fixed footer overlap

--- a/themes/nexus/sass/_variables.scss
+++ b/themes/nexus/sass/_variables.scss
@@ -4,10 +4,10 @@ $base__space-unit: 1rem;
 
 // Breakpoints
 
-$desktop: "all and (min-width: 650px)";
+$desktop: "all and (min-width: 950px)";
 
 $tablet: "all and (min-width: 850px)";
-
+$tablet-test: "all and (min-width: 650px)";
 // Colors
 
 
